test/errors/types/tuple_unknown_field_fail.hy
int main()
{
    (int count, string greeting) named = (1, "hi")
    int x = named.total
    return 0
}
